05-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-cicd-demo
  labels:
    app: java-cicd-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-cicd-demo
  template:
    metadata:
      labels:
        app: java-cicd-demo
    spec:
      containers:
        - name: java-cicd-demo
          image: nikhilkesarwani/java-cicd-demo:11
          ports:
            - containerPort: 8081
          imagePullPolicy: IfNotPresent
