05-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-cicd-demo-service
spec:
  type: ClusterIP
  selector:
    app: java-cicd-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
